# advent-of-code

./: .gitignore  Cargo.toml  LICENSE
2023/: Cargo.toml  README.md
2023/benches/: bench1.rs  bench4.rs
2023/src/: day1.rs  day3.rs  day6.rs  day7.rs
2024/ocaml/day-01/: main.ml
2024/zig/day-01/: main.zig
2024/zig/day-02/: main.zig
2024/zig/day-03/: main.zig
2024/zig/day-04/: main.zig
benches/: bench2.rs  bench3.rs  bench7.rs
src/: day1.rs  day2.rs  day4.rs  lib.rs  main.rs
