[package]
edition = "2021"
name = "aoc2023"
version = "0.1.0"

[dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"

[[bench]]
name = "bench1"
harness = false

[[bench]]
name = "bench2"
harness = false

[[bench]]
name = "bench3"
harness = false

[[bench]]
name = "bench4"
harness = false

[[bench]]
name = "bench7"
harness = false